common-applications/test-environment/cla/website/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: claservice
  namespace: cla
spec:
  ports:
  - name: httpport
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    component: cla-frontend
  type: ClusterIP
